adjusted - ihhealthextras+new resume

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -91,7 +91,7 @@
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
               <!-- Add different photos of activities and make the page more fun :) -->
               <h2>Hi, I'm Farhan!</h2>
-              <h6><span class="h6-T">Forward </span>Thinking Designer</h6>
+              <h6>Product Designer</h6>
               <br>
               <br>
               <div class="class hidden-lg hidden-md hidden-sm col-xs-12" style="padding:0px;">
