--- a/html/home.html
+++ b/html/home.html
@@ -98,7 +98,7 @@
       <div id="skills"></div>
       <h1 class="title"><span class="animated-text" style="--delay: 0.2s">Farhan</span> <span class="animated-text" style="--delay: 0.3s">Ahmed</span></h1>
       <div class="subtitle fade-in">
-        <p>Forward Thinking Designer</p>
+        <p>Product Designer</p>
       </div>
       <div class="arrow bounce" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" data-aos-offset="-300">
         <a href="#my-work"><i class="fa fa-angle-down fa-3x" aria-hidden="true"></i></a>
@@ -162,7 +162,7 @@
     <div class="container-fluid col-centered" id="my-work">
       
       <ul data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid">
-        <h4 style="color: #aaaaaa;">My Works</h4>
+        <h4 style="color: #aaaaaa;">My Work</h4>
         <br>
 
         <a href="./works/ihHealthExtras.html">
