--- a/html/works/ihHealthExtras.html
+++ b/html/works/ihHealthExtras.html
@@ -278,9 +278,9 @@
                     </video>                
                   </div>
                 <div class="col-sm-6" data-aos="fade-up" data-aos-duration="600">
-                  <h2 class="custom-curve-heading">Tracking benefits just got easier.</h2>
+                  <h2 class="custom-curve-heading">No more calls or receipts to track benefits</h2>
                   <p class="custom-curve-paragraph">
-                    Members no longer need to sift through receipts or call in to check their balances. With the new Health Extras dashboard, you can instantly see how much you've spent, how much is left, and how many days you have to use your benefits — all in one place.
+                    Users can now visit the redesigned dashboard for an at-a-glance view of spending, remaining balance, and benefit explanation.                  
                   </p>
                 </div>
               </div>
@@ -291,9 +291,9 @@
             <div class="col-lg-7 col-md-7 col-sm-10 col-xs-12 col-centered custom-curve-content">
               <div class="row">
                 <div class="col-sm-6" data-aos="fade-up" data-aos-duration="600">
-                  <h2 class="custom-curve-heading">See exactly where your benefits are going.</h2>
+                  <h2 class="custom-curve-heading">Transparency in spending</h2>
                   <p class="custom-curve-paragraph">
-                    Every purchase, every claim — all in one place. The Activity page gives you a clear, up-to-date view of how you're spending your Health Extras dollars, so you're always in control of your wellness benefits.
+                    The redesigned Activity page addresses outdated information by providing a clear, real-time view of every purchase and claim.
                   </p>
                 </div>
                 <div class="col-sm-6" data-aos="fade-up" data-aos-duration="600">
@@ -313,9 +313,9 @@
                     </video>
                   </div>
                   <div class="col-sm-6" data-aos="fade-up" data-aos-duration="600">
-                    <h2 class="custom-curve-heading">Easily manage your Benefits card.</h2>
+                    <h2 class="custom-curve-heading">Replacing lost cards without paperwork</h2>
                     <p class="custom-curve-paragraph">
-                      Lost card? Need of replacement? Members can now request a new Health Extras™ card with just one click — no phone calls or paperwork needed.
+                      The newly designed on-click request feature saves users time and reduces the business paper costs. 
                     </p>
                   </div>
                 </div>
