added if i had more time section

--- a/html/works/ihHealthExtras.html
+++ b/html/works/ihHealthExtras.html
@@ -132,7 +132,7 @@
               <li>
                 <a href="#outcomes">Outcomes</a>
                 <ul class="nav nav-stacked">
-                  <!-- <li><a href="#usability-testing">Usability Testing</a></li> -->
+                  <li><a href="#moretime">If I had More Time</a></li>
                 </ul>
               </li>
             </ul>
@@ -512,6 +512,16 @@
                   </div>
                 </div>
               </section>
+
+              <br><br>
+
+              <div id="moretime" class="subgroup">
+                <h4>If I Had More Time</h4>
+                 <p class="small-margin-bottom">
+                    If I had more time, I would <span class="highlight highlight-ihhealthextras">conduct true user validation with existing Independent Health members—especially those who frequently use Health Extras or Nutrition Benefits—to directly observe their pain points</span> and refine interactions like benefit breakdowns, alerting low balances, and contextual guidance within the portal. This could enhance usability, boost satisfaction beyond 93 %, and further reduce support call volumes. <span class="highlight highlight-ihhealthextras">one key piece of feedback was the importance of easily requesting a new card, which turned out to be a much more common use case than I initially anticipated.</span>
+                  </p>
+                <br>
+              </div>
 
             </section>
           </div>
