--- a/html/home.html
+++ b/html/home.html
@@ -176,7 +176,7 @@
                   UX/UI Design, Design System, Web Design
                 </h5>
                 <p class="card-content">
-                 Allowing policy holders to track & manage their health reward benefits through a few clicks.
+                 Allowing IH members to track & manage their health reward benefits.
                 </p>
               </div>
             </div>
