added-image-nut-desktop

--- a/html/home.html
+++ b/html/home.html
@@ -165,12 +165,30 @@
         <h4 style="color: #aaaaaa;">My Work</h4>
         <br>
 
+        <a href="./works/nasaSAT.html">
+          <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
+            <div class="card" style="background-image: url(../assets/nasaSAT/pictures/thumbnail-nasaSAT.png); background-size: contain; background-repeat: no-repeat;">
+              <div class="card-pants">
+                <h4 class="card-title">
+                  NASA: Track Astronaut Data
+                </h4>
+                <h5 class="card-subtitle">
+                  Product Design
+                </h5>
+                <p class="card-content">
+                 Improved NASA researchers’ workflow for astronaut performance data.
+                </p>
+              </div>
+            </div>
+          </li>
+        </a>
+
         <a href="./works/ihHealthExtras.html">
           <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
             <div class="card" style="background-image: url(../assets/ihHealthExtras/pictures/thumnail\ -\ health\ extras.png); background-size: contain; background-repeat: no-repeat;">
               <div class="card-pants">
                 <h4 class="card-title">
-                  Digitizing Health Benefits
+                  IH: Digitizing Health Benefits
                 </h4>
                 <h5 class="card-subtitle">
                   UX/UI Design, Design System, Web Design
@@ -206,7 +224,7 @@
             <div class="card" style="background-image: url(../assets/nasa/solution-img-4.jpg); background-size: contain; background-repeat: no-repeat;">
               <div class="card-pants">
                 <h4 class="card-title">
-                  NASA: Design An Anomaly
+                  Design An Anomaly
                 </h4>
                 <h5 class="card-subtitle">
                   Product Design
