--- a/html/works/ihHealthExtras.html
+++ b/html/works/ihHealthExtras.html
@@ -413,7 +413,7 @@
             </section>
           </div>
 
-          <section class="custom-image-grid-section">
+          <!-- <section class="custom-image-grid-section">
             <div class="col-lg-7 col-md-7 col-sm-10 col-xs-12 col-centered">
               <div class="row image-row">
                 <div class="col-sm-6 image-col">
@@ -440,7 +440,11 @@
                 </div>
               </div>
             </div>
-          </section>
+          </section> -->
+
+          <div class="col-lg-7 col-md-7 col-sm-10 col-xs-12 col-centered main-content">
+           <img class="img-responsive full-img" src="../../assets/ihHealthExtras/pictures/nut-desktop.png" data-aos="fade-up" data-aos-duration="600">
+          </div>
 
           <div class="col-lg-7 col-md-7 col-sm-10 col-xs-12 col-centered main-content">
            <img class="img-responsive full-img" src="../../assets/ihHealthExtras/pictures/nut-mobile.png" data-aos="fade-up" data-aos-duration="600">
