--- a/html/home.html
+++ b/html/home.html
@@ -165,7 +165,7 @@
         <h4 style="color: #aaaaaa;">My Work</h4>
         <br>
 
-        <a href="./works/nasaSAT.html">
+        <!-- <a href="./works/nasaSAT.html">
           <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
             <div class="card" style="background-image: url(../assets/nasaSAT/pictures/thumbnail-nasaSAT.png); background-size: contain; background-repeat: no-repeat;">
               <div class="card-pants">
@@ -181,7 +181,7 @@
               </div>
             </div>
           </li>
-        </a>
+        </a> -->
 
         <a href="./works/ihHealthExtras.html">
           <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
