updated-resume-ihcasestudy

--- a/html/works/ihHealthExtras.html
+++ b/html/works/ihHealthExtras.html
@@ -378,7 +378,7 @@
               <div id="nfr" class="subgroup">
                 <h4>NFR's & Storybook </h4>
                  <p class="small-margin-bottom">
-                  As part of this project, I created clear non-functional requirements (NFRs) to guide the engineering team during development. These NFRs helped set expectations around performance, accessibility, responsiveness, and usability — ensuring that the final product delivered a consistent and reliable experience for users. Providing these upfront minimized confusion, reduced back-and-forth, and supported a smoother handoff between design and development. 
+                  As part of this project, I created non-functional requirements (NFRs) to guide the engineering team during development. These NFRs helped set expectations to engineers around performance, pixel spacing, responsivness, typography, and interaction. 
                   <br><br>
                   Below is a snippet of what I shared with engineers for this project. <span class="highlight highlight-ihhealthextras">After development, the components were published to Storybook, allowing me to review, test, and approve them before they were integrated into our component libary and used for features.</span>
                 </p>
@@ -390,8 +390,8 @@
                 <img class="img-responsive full-img" src="../../assets/ihHealthExtras/pictures/nfr3.png" data-aos="fade-up" data-aos-duration="600">
                 <br>
                 <img class="img-responsive full-img" src="../../assets/ihHealthExtras/pictures/nfr4.png" data-aos="fade-up" data-aos-duration="600">
-                <br>
-                <img class="img-responsive full-img" src="../../assets/ihHealthExtras/pictures/nfr5.png" data-aos="fade-up" data-aos-duration="600">
+                <!-- <br> -->
+                <!-- <img class="img-responsive full-img" src="../../assets/ihHealthExtras/pictures/nfr5.png" data-aos="fade-up" data-aos-duration="600"> -->
               </div>
             </section>
           </div>
